# interactive-maze-solver-visualizer

maze-solver-visualizer/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  maze_generator.py  maze_solver.py  maze_visualizer.py
maze-solver-visualizer/.github/: pull_request_template.md
maze-solver-visualizer/algorithms/: README.md  __init__.py  breadth_first_search.py
maze-solver-visualizer/docs/: ALGORITHMS.md  ARCHITECTURE.md  (+2 more)
maze_solver_visualizer/: .gitignore  BREADTH_COLORING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  analyze_breadth_levels.py  compatibility.py  demo.py  demo_explicit_graph.py  demo_multiple_paths.py  graph.py  main.py  main_enhanced.py  maze_generator.py  maze_solver.py  maze_visualizer.py  pyproject.toml  requirements-dev.txt  run_tests.py  setup.cfg  setup.py  test_breadth_coloring.py  test_components.py  test_randomized_positions.py  verify_scenarios.py
maze_solver_visualizer/.github/: pull_request_template.md
maze_solver_visualizer/.github/ISSUE_TEMPLATE/: bug_report.yml
maze_solver_visualizer/.github/workflows/: ci.yml
maze_solver_visualizer/algorithms/: base_algorithm.py  breadth_first_search.py  depth_first_search.py  dijkstra.py
maze_solver_visualizer/docs/: ALGORITHMS.md  README.md
maze_solver_visualizer/tests/: conftest.py  test_algorithms.py  test_bfs.py  test_compatibility.py  test_dfs.py  test_dijkstra.py  test_enhanced_features.py  test_explicit_graph.py  test_integration.py  test_main_integration.py  test_maze_generator.py  test_maze_solver.py  test_performance.py  test_visualizer.py
(+3 files in other folders)
